test/integration/good/code-gen/single-argument-lpmf.stan
functions {
  real foo0_log(int y) {
    return -5;
  }
  real foo1_lpmf(int y) {
    return -5;
  }
  real foo4_lp(int y) {
    return -5;
  }
  real foo2_log(real y) {
    return -5;
  }
  real foo3_lpdf(real y) {
    return -5;
  }
  real foo5_lp(real y) {
    return -5;
  }
}